Refactor localizaciones