@@ -1,6 +1,6 @@
 package services.localizacionesService.georef;
 
-import domain.localizaciones.Departamento;
+import domain.localizaciones.Localidad;
 import domain.localizaciones.Municipio;
 import domain.localizaciones.Provincia;
 import domain.ubicaciones.Ubicacion;
@@ -14,29 +14,25 @@ import java.util.Objects;
 import java.util.stream.Collectors;
 import services.LectorPropiedades;
 import services.localizacionesService.LocalizacionesService;
-import services.localizacionesService.georef.moldes.DepartamentoMolde;
+import services.localizacionesService.georef.moldes.ListaLocalidadesMolde;
+import services.localizacionesService.georef.moldes.LocalidadMolde;
 import services.localizacionesService.georef.moldes.GeorefService;
-import services.localizacionesService.georef.moldes.ListaDepartamentosMolde;
 import services.localizacionesService.georef.moldes.ListaMunicipiosMolde;
 import services.localizacionesService.georef.moldes.ListaProvinciasMolde;
 import services.localizacionesService.georef.moldes.MunicipioMolde;
 import services.localizacionesService.georef.moldes.ProvinciaMolde;
-import java.io.IOException;
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class ServicioGeoref implements LocalizacionesService {
   private static Integer maximaCantidadRegistrosProvincias;
   private static Integer maximaCantidadRegistrosMunicipios;
-  private static Integer maximaCantidadRegistrosDepartamentos;
+  private static Integer maximaCantidadRegistrosLocalidades;
   private static String urlGeorefApi;
 
-  private Retrofit retrofit;
+  private final Retrofit retrofit;
 
   private static List<ProvinciaMolde> _provincias;
   private static List<MunicipioMolde> _municipios;
-  private static List<DepartamentoMolde> _departamentos;
+  private static List<LocalidadMolde> _localidades;
 
 
   public ServicioGeoref(String pathPropiedades) throws IOException {
@@ -47,7 +43,7 @@ public class ServicioGeoref implements LocalizacionesService {
       urlGeorefApi = lectorPropiedades.getPropiedad("url-georef-api");
       maximaCantidadRegistrosProvincias = lectorPropiedades.getPropiedadInt("maximaCantidadRegistrosProvincias");
       maximaCantidadRegistrosMunicipios = lectorPropiedades.getPropiedadInt("maximaCantidadRegistrosMunicipios");
-      maximaCantidadRegistrosDepartamentos = lectorPropiedades.getPropiedadInt("maximaCantidadRegistrosDepartamentos");
+      maximaCantidadRegistrosLocalidades = lectorPropiedades.getPropiedadInt("maximaCantidadRegistrosLocalidades");
     }
 
     this.retrofit = new Retrofit.Builder()
@@ -72,27 +68,31 @@ public class ServicioGeoref implements LocalizacionesService {
     return moldeAMunicipio(municipioMolde);
   }
 
-  public Departamento departamento(Integer id) throws IOException {
+  public Localidad localidad(Integer id) throws IOException {
 
     if (primeraPeticion()) cargarMoldes();
 
-    DepartamentoMolde departamentoMolde = _departamentos.stream().filter(departamento -> Objects.equals(departamento.id, id)).findFirst().get();
-    return moldeADepartamento(departamentoMolde);
+    LocalidadMolde localidadMolde = _localidades.stream().filter(localidad -> Objects.equals(localidad.id, id)).findFirst().get();
+    return moldeALocalidad(localidadMolde);
 
+  }
+
+  private Localidad moldeALocalidad(LocalidadMolde molde) {
+    return new Localidad(molde.id,
+        molde.nombre,
+        new Ubicacion(molde.centroide.getLat(),
+            molde.centroide.getLon()),
+        moldeAMunicipio(_municipios.stream().filter(municipioMolde -> municipioMolde.id == molde.municipio.id).toList().get(0)),
+        moldeAProvincia(_provincias.stream().filter(provinciaMolde -> provinciaMolde.id == molde.provincia.id).toList().get(0)));
   }
 
   private Municipio moldeAMunicipio(MunicipioMolde molde) {
     return new Municipio(molde.id,
         molde.nombre,
         new Ubicacion(molde.centroide.getLat(),
-            molde.centroide.getLon()));
-  }
-
-  private Departamento moldeADepartamento(DepartamentoMolde molde) {
-    return new Departamento(molde.id,
-        molde.nombre,
-        new Ubicacion(molde.centroide.getLat(),
-            molde.centroide.getLon()));
+            molde.centroide.getLon()),
+        moldeAProvincia(_provincias.stream().filter(provinciaMolde -> provinciaMolde.id == molde.provincia.id).toList().get(0)),
+        localidadesDelMunicipioMolde(molde));
   }
 
   private Provincia moldeAProvincia(ProvinciaMolde molde) {
@@ -101,7 +101,7 @@ public class ServicioGeoref implements LocalizacionesService {
         molde.nombre,
         new Ubicacion(molde.centroide.getLat(), molde.centroide.getLon()),
         municipiosDeLaProvinciaMolde(molde),
-        departamentosDeLaProvinciaMolde(molde));
+        localidadesDeLaProvinciaMolde(molde));
   }
 
   private List<ProvinciaMolde> listaProvinciasMolde() throws IOException {
@@ -120,41 +120,46 @@ public class ServicioGeoref implements LocalizacionesService {
     return responseMunicipiosArgentinos.body().municipios;
   }
 
-  private List<DepartamentoMolde> listaDepartamentosMolde() throws IOException {
+  private List<LocalidadMolde> listaLocalidadesMolde() throws IOException {
     GeorefService georefService = this.retrofit.create(GeorefService.class);
-    Call<ListaDepartamentosMolde> requestDepartamentosArgentinos = georefService.departamentosMax(maximaCantidadRegistrosDepartamentos);
-    Response<ListaDepartamentosMolde> responseDepartamentosArgentinos = requestDepartamentosArgentinos.execute();
+    Call<ListaLocalidadesMolde> requestlocalidadesArgentinos = georefService.localidadesMax(maximaCantidadRegistrosLocalidades);
+    Response<ListaLocalidadesMolde> responselocalidadesArgentinos = requestlocalidadesArgentinos.execute();
 
-    return responseDepartamentosArgentinos.body().departamentos;
+    return responselocalidadesArgentinos.body().localidades;
   }
 
   private List<Municipio> municipiosDeLaProvinciaMolde(ProvinciaMolde provinciaMolde) {
-    List<MunicipioMolde> municipiosMolde = _municipios.stream().filter(municipio -> municipio.provincia.id == provinciaMolde.id).collect(Collectors.toList());
+    List<MunicipioMolde> municipiosMolde = _municipios.stream().filter(municipio -> municipio.provincia.id == provinciaMolde.id).toList();
     return municipiosMolde.stream().map(municipio -> moldeAMunicipio(municipio)).collect(Collectors.toList());
   }
 
-  private List<Departamento> departamentosDeLaProvinciaMolde(ProvinciaMolde provinciaMolde) {
-    List<DepartamentoMolde> departamentosMolde = _departamentos.stream().filter(departamento -> departamento.provincia.id == provinciaMolde.id).collect(Collectors.toList());
-    return departamentosMolde.stream().map(departamento -> moldeADepartamento(departamento)).collect(Collectors.toList());
+  private List<Localidad> localidadesDeLaProvinciaMolde(ProvinciaMolde provinciaMolde) {
+    List<LocalidadMolde> localidadesMolde = _localidades.stream().filter(localidad -> localidad.provincia.id == provinciaMolde.id).toList();
+    return localidadesMolde.stream().map(localidad -> moldeALocalidad(localidad)).collect(Collectors.toList());
+  }
+
+  private List<Localidad> localidadesDelMunicipioMolde(MunicipioMolde municipioMolde) {
+    List<LocalidadMolde> localidadesMolde = _localidades.stream().filter(localidad -> localidad.municipio.id == municipioMolde.id).toList();
+    return localidadesMolde.stream().map(localidad -> moldeALocalidad(localidad)).collect(Collectors.toList());
   }
 
   private Boolean georefInstanciado() {
     return urlGeorefApi != null
         && maximaCantidadRegistrosProvincias != null
         && maximaCantidadRegistrosMunicipios != null
-        && maximaCantidadRegistrosDepartamentos != null;
+        && maximaCantidadRegistrosLocalidades != null;
   }
 
   private Boolean primeraPeticion() {
     return
     (_provincias == null || _provincias.isEmpty())
     && (_municipios == null || _municipios.isEmpty())
-    && (_departamentos == null || _departamentos.isEmpty());
+    && (_localidades == null || _localidades.isEmpty());
   }
 
   private void cargarMoldes() throws IOException {
     _provincias = listaProvinciasMolde();
     _municipios = listaMunicipiosMolde();
-    _departamentos = listaDepartamentosMolde();
+    _localidades = listaLocalidadesMolde();
   }
 }
